fix: z-index for description image

--- a/wp-content/themes/mebli/assets/scss/_ordering.scss
+++ b/wp-content/themes/mebli/assets/scss/_ordering.scss
@@ -26,6 +26,7 @@
       width:      42.35vw;
       max-width:  813px;
       background: transparent;
+      z-index:    -2;
     }
   }
 }
